[package]
name = "rx_bevy_observable_merge"
description = "merge observable for rx_bevy"
version = "0.1.0"
readme = "readme.md"
publish = false

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license-file.workspace = true

[lints]
workspace = true

[features]
default = ["dev"]
dev = []
example = ["dev"]
reflect = [
    "dep:bevy_reflect",
    "rx_bevy_observable/reflect",
    "rx_bevy_operator_map_into/reflect",
    "rx_bevy_common_bounds/reflect",
]

[dependencies]
rx_bevy_observable = { workspace = true }
rx_bevy_operator_map_into = { workspace = true }
rx_bevy_common_bounds = { workspace = true }
bevy_reflect = { workspace = true, optional = true }

[dev-dependencies]
rx_bevy = { workspace = true }
rx_bevy_testing = { workspace = true }
