[package]
name = "rx_bevy_observable_message"
description = "rx_bevy message observable"
version = "0.1.0"
readme = "readme.md"
publish = true

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
keywords = [
    "rx",
    "reactivex",
    "rx_core",
    "rx_core_observable",
    "rx_bevy",
    "rx_bevy_observable",
]

[lints]
workspace = true

[features]
default = []
example = [
    "bevy/dynamic_linking",
    "bevy/bevy_asset",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_gltf",
    "bevy/bevy_pbr",
    "bevy/bevy_picking",
    "bevy/bevy_render",
    "bevy/bevy_scene",
    "bevy/bevy_winit",
    "bevy/tonemapping_luts",
    "bevy/x11",
]

[dependencies]
rx_core_common = { version = "0.1.0", path = "../rx_core_common" }
rx_bevy_common = { version = "0.1.0", path = "../rx_bevy_common" }
rx_core_macro_observable_derive = { version = "0.1.0", path = "../rx_core_macro_observable_derive" }
rx_core_macro_subscription_derive = { version = "0.1.0", path = "../rx_core_macro_subscription_derive" }
bevy_ecs = { workspace = true }
derive-where = { workspace = true }

[dev-dependencies]
bevy = { workspace = true }
rx_bevy = { version = "0.1.0", path = "../rx_bevy" }
rx_core_testing = { version = "0.1.0", path = "../rx_core_testing" }
examples_common = { workspace = true }
bevy-inspector-egui = { workspace = true, features = ["bevy_render"] }
bevy_egui = { workspace = true }

[[example]]
name = "message_observable_example"
path = "examples/message_observable_example.rs"
required-features = ["example"]
