[package]
# TODO: Rename to rx_bevy_observable_pipe it's an observable
name = "rx_bevy_observable_pipe"
description = "pipe operator for rx_bevy"
version = "0.1.0"
readme = "readme.md"
publish = false

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license-file.workspace = true

[lints]
workspace = true

[features]
default = []
dev = ["rx_bevy/dev", "rx_bevy_core/dev", "rx_bevy_testing/dev"]
example = [
    "dev",
    "rx_bevy/example",
    "rx_bevy_core/example",
    "rx_bevy_testing/example",
]

[dependencies]
rx_bevy_core = { workspace = true }

[dev-dependencies]
rx_bevy = { workspace = true }
rx_bevy_testing = { workspace = true }
