[package]
name = "rx_bevy_observer_flat"
description = "flat observer for rx_bevy, it observes flat"
version = "0.1.0"
readme = "readme.md"
publish = false

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license-file.workspace = true

[lints]
workspace = true

[features]
default = ["dev"]
dev = []
example = ["dev"]

[dependencies]
rx_bevy_observable = { workspace = true }
rx_bevy_observer_shared = { workspace = true }

[dev-dependencies]
rx_bevy = { workspace = true }
rx_bevy_testing = { workspace = true }
