[package]
name = "rx_bevy_observer_fn"
description = "fn observer for rx_bevy, it calls a closure"
version = "0.1.0"
readme = "readme.md"
publish = false

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license-file.workspace = true

[lints]
workspace = true

[features]
default = ["dev"]
dev = [
    "rx_bevy/dev",
    "rx_bevy_common_bounds/dev",
    "rx_bevy_core/dev",
    "rx_bevy_testing/dev",
]
example = [
    "dev",
    "rx_bevy/example",
    "rx_bevy_core/example",
    "rx_bevy_testing/example",
]
bevy = [
    "rx_bevy/bevy",
    "rx_bevy_core/bevy",
    "rx_bevy_testing/bevy",
    "tick",
    "channel_context",
]
channel_context = [
    "rx_bevy/channel_context",
    "rx_bevy_core/channel_context",
    "rx_bevy_testing/channel_context",
]
tick = ["rx_bevy/tick", "rx_bevy_core/tick", "rx_bevy_testing/tick"]
reflect = [
    "dep:bevy_reflect",
    "rx_bevy/reflect",
    "rx_bevy_common_bounds/reflect",
    "rx_bevy_core/reflect",
]

[dependencies]
rx_bevy_core = { workspace = true }
rx_bevy_common_bounds = { workspace = true }
bevy_reflect = { workspace = true, optional = true }

[dev-dependencies]
rx_bevy = { workspace = true }
rx_bevy_testing = { workspace = true }
